# checkers-AI

python/: client.py  game.py  main.py  requirements.txt
rust/: Cargo.toml
rust/src/: client.rs  main.rs
