[package]
name = "checks"
version = "0.1.0"
authors = ["kravc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2.0", features = ["full"] }
serde_json = "1.0.60"
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
log = "0.4"
env_logger = "0.8.2"
chrono = "0.4"
rand = "0.5"